Name:                xml-monad
Version:             0.1
Synopsis:            Monadic extensions to the xml package.
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Aristid Breitkreuz
Maintainer:          aristidb@googlemail.com
Copyright:           (C) 2010 Aristid Breitkreuz
Category:            Text, XML
Build-type:          Simple
Extra-source-files:  README
Cabal-version:       >=1.8


Library
  Exposed-modules:     Text.XML.Monad
  Build-depends:       base >=4.2 && <5,
                       monadLib ==3.6.*,
                       monadLib-compose ==0.2.*,
                       xml ==1.3.*
  -- Other-modules:       

  GHC-Options: -Wall
  
  -- Build-tools:         
  